# launcher

./: .editorconfig  .gitignore  AGENTS.md  README.md  nuxt.config.ts  package.json  rust-toolchain.toml  tailwind.config.ts
.cargo/: config.toml
.cursor/rules/: project-context.mdc
.github/workflows/: publish.yml
scripts/: bump.ts
src/: app.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: events.rs  lib.rs  main.rs  types.rs
src-tauri/src/commands/: accounts.rs  game.rs  mod.rs  modpacks.rs  settings.rs  utils.rs  window.rs
src-tauri/src/runners/: mod.rs  tray.rs  vault.rs
src-tauri/src/utils/: vault.rs
src/assets/css/: launcher.css  tailwind.css
src/components/: PlayBar.vue  ServerStatus.vue  TitleBar.vue
src/components/Header/: AccountMenu.vue  HeaderBar.vue  HelpMenu.vue
src/components/Settings/: ConfirmModal.vue  SettingRow.vue  SettingToggle.vue  SettingsAccounts.vue  SettingsLauncher.vue  SettingsModal.vue  SettingsModpack.vue
src/components/Sidebar/: AnnouncementCard.vue  MemorySelector.vue  ModpackCard.vue  SidePanel.vue
src/composables/: useAccountRemoveConfirm.ts  useAccountsCommand.ts  useLauncherMaintenanceCommand.ts  useLightyEvents.ts  useModpacksCommand.ts  useSettingsCommand.ts  useUtilsCommand.ts
src/layouts/: default.vue
src/pages/: debug.vue  index.vue  splashscreen.vue
src/stores/: accountsStore.ts  consoleStore.ts  downloadStore.ts  errorStore.ts  launchStore.ts  launcherStore.ts
src/types/: lighty-events.ts  settings.ts
