[package]
name = "minecraft_launcher"
version = "0.1.6"
description = "Minecraft launcher built with Rust and Tauri"
authors = ["Tacx <12997062+tacxou@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "launcher_test_rust_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
events = ["lighty-launcher/events"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
reqwest = { version = "0.11", features = ["json"] }
# path = "../../LightyLauncherLib"
lighty-launcher = { git = "https://github.com/tacxou/LightyLauncherLib.git", branch = "pr-fix-neoforge-loader", features = [
    "tracing",
    "neoforge",
    "fabric",
    "events",
] }
tauri-plugin-stronghold = "2"
iota_stronghold = "2"
zeroize = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"

[profile.dev.package.scrypt]
opt-level = 3
