[package]
name = "miratopia_launcher"
version = "0.1.10"
description = "Miratopia launcher built with Rust and Tauri"
authors = ["Tacx <12997062+tacxou@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "miratopia_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["console"]
events = ["lighty-launcher/events"]
console = []

[profile.dev.package.scrypt]
opt-level = 3

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
reqwest = { version = "0.11", features = ["json"] }
# path = "../../LightyLauncherLib"
lighty-launcher = { git = "https://github.com/tacxou/LightyLauncherLib.git", branch = "pr-fix-neoforge-loader", features = [
  "tracing",
  "neoforge",
  "fabric",
  "events",
] }
lighty-auth = { git = "https://github.com/tacxou/LightyLauncherLib.git", branch = "pr-fix-neoforge-loader" }
tauri-plugin-stronghold = "2"
iota_stronghold = "2"
zeroize = "1"
once_cell = "1.21.3"
open = "5"
anyhow = "1.0.102"
chrono = "0.4"
tauri-plugin-store = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
